Implemented multi thread synchronization updates

--- a/HogWild++/Makefile
+++ b/HogWild++/Makefile
@@ -6,9 +6,10 @@ OBJ := obj
 SRC := src
 BIN := bin
 
-all: sparse
+all: sparse shared
 
 sparse: $(BIN)/sparse
+shared: $(BIN)/shared
 
 # Sparse Shared SVM
 $(BIN)/sparse: $(OBJ)/main_sparse.o $(OBJ)/sparse_data.o $(OBJ)/SVM_sparse.o $(OBJ)/newton_raphson.o
@@ -23,6 +24,13 @@ $(OBJ)/SVM_sparse.o: $(SRC)/SVM_sparse.cu $(INC)/SVM_sparse.cuh
 $(OBJ)/sparse_data.o: $(SRC)/sparse_data.cu $(INC)/sparse_data.cuh
 	$(NVCC) $(NVCC_FLAGS) -c $< -o $@
 
+
+# Sparse SVM with multi-thread update
+$(BIN)/shared: $(OBJ)/main_sparse.o $(OBJ)/sparse_data.o $(OBJ)/SVM_sparse_shared.o $(OBJ)/newton_raphson.o
+	$(NVCC) $^ -o $@
+
+$(OBJ)/SVM_sparse_shared.o: $(SRC)/SVM_sparse_shared.cu $(INC)/SVM_sparse.cuh 
+	$(NVCC) $(NVCC_FLAGS) -c $< -o $@
 
 # Resources
 $(OBJ)/newton_raphson.o: $(SRC)/newton_raphson.cpp $(INC)/newton_raphson.hpp
