--- a/HogWild++/Makefile
+++ b/HogWild++/Makefile
@@ -77,6 +77,15 @@ $(OBJ)/SVM_jshared.o: $(SRC)/SVM_jshared.cu $(INC)/SVM_jshared.cuh
 $(OBJ)/sparse_data_managed.o: $(SRC)/sparse_data_managed.cu $(INC)/sparse_data_managed.cuh
 	$(NVCC) $(NVCC_FLAGS) -c $< -o $@
 
+#Sparse SVM with heterogenous synchronization and unified memory(JETSON)
+$(BIN)/jhetero: $(OBJ)/main_jhetero.o $(OBJ)/sparse_data_managed.o $(OBJ)/SVM_jhetero.o $(OBJ)/newton_raphson.o
+	$(NVCC) $(LINK_FLAGS) $^ -o $@
+
+$(OBJ)/main_jhetero.o: $(SRC)/main_jhetero.cu
+	$(NVCC) $(NVCC_FLAGS) -c $< -o $@
+
+$(OBJ)/SVM_jhetero.o: $(SRC)/SVM_jhetero.cu $(INC)/SVM_jhetero.cuh 
+	$(NVCC) $(NVCC_FLAGS) -c $< -o $@
 
 
 # Resources
